--- a/appEventos/src/app/login/login.component.html
+++ b/appEventos/src/app/login/login.component.html
@@ -1,28 +1,30 @@
-
-<div class="container" style="background-color:steelblue "align="center">
-    
-        <div class="col-md-4 col-md-offset-4">
-            <div class="login-panel panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title">Login</h3>
+<br />
+<div class="container">
+    <div class="row">
+        <div class="col-md-4"></div>
+        <div class="col-md-offset-4 col-md-4">
+            <div class="well" >
+                <div *ngIf="!resultMessage">
+                    <div class="alert alert-danger" role="alert">
+                        {{message}}
+                    </div>
                 </div>
-                <div class="panel-body">
-                            <div class="form-group">
-                                <input class="form-control" type="text" placeholder="Correo"  [(ngModel)]="user.login"  >
-                            </div>
-                            <div class="form-group">
-                                <input class="form-control" placeholder="Clave" [(ngModel)]="user.password" type="password" >
-                            </div>
-                            <div class="checkbox">
-                                <label>
-                                    <input name="remember" type="checkbox" value="Remember Me">Recorda mi Acceso
-                                </label>
-                            </div>
-                            <!-- Change this to a button or input when using this as a form -->
-                            <input type="button" class="btn btn-lg btn-success btn-block" value="Entrar" (click)="entrar($event)">
-                            <label>{{message}}</label>
-                </div>
+                <label>Email</label>
+                <input class="form-control" type="email" [(ngModel)]="user.login"  >
+                <br/>
+                <label>Email</label>
+                <input class="form-control" [(ngModel)]="user.password" type="password" >
+                <hr />
+                <input type="button" class="btn btn-lg btn-success btn-block" value="Entrar" (click)="entrar($event)">
             </div>
         </div>
-
+    </div>
 </div>
+<br/>
+<div align='center'>
+    <h4>Roles</h4>
+    <span>Administrador: admin@tektonlabs.com , password: 123</span><br/>
+    <span>Invitado: postulante@tektonlabs.com , password: 123</span>
+</div>
+
+
